--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,75 @@
-body {
-    margin: 0;
-    padding: 0;
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700|Merriweather:400,300,400italic,700|Open+Sans:300);
+
+* {
+	box-sizing: border-box;
 }
+body {
+	font-family: 'Merriweather';
+	color: rgb(0, 0, 0);
+	font-size: 16px;
+    line-height: 1.5;
+   	font-weight: 300;
+    margin: 80;
+    padding: 80;
+    background: linear-gradient(90deg, rgb(253, 238, 211) 0%, rgb(222, 253, 255) 100%);
+}
+h1 {
+	font-size: 44px;
+	font-family: 'Montserrat';
+	color:rgb(80, 78, 78);
+	margin: 16px;
+	margin-bottom: 0px;
+	font-weight:800;
+	text-align: center;
+}
+
+h2 {
+	font-family: 'Montserrat';
+	color:rgb(80, 78, 78);
+	margin: 16px;
+	font-weight:800;
+	text-align: center;
+}
+
+h3 {
+	font-family: 'Montserrat';
+	color:rgb(80, 78, 78);
+	margin: 10px;
+	font-weight:800;
+	text-align: left;
+}
+
+h4 {
+	font-family: 'Montserrat';
+	color:rgb(80, 78, 78);
+	margin: 10px;
+	font-weight:800;
+	text-align: center;
+    	line-height: 1em;
+    	top: 0px;
+
+}
+span.name {
+	font-family: 'Montserrat';
+    color: #333;
+    font-weight: 700;
+    font-size: 2em;
+	text-align: center;
+}
+p {
+	margin-left: auto;
+	padding-left: 20px;
+    padding-right: 20px;
+	font-family: 'Merriweather';
+	text-align: justify;
+}
+
+body {
+    margin: 80;
+    padding: 80;
+    background: linear-gradient(90deg, rgb(253, 238, 211) 0%, rgb(222, 253, 255) 100%);
+}
+
 #map {
     width: 90%;
     height: 600px;
@@ -87,4 +155,3 @@ a.no-underline {
     margin-top: 0.3em;
     margin-bottom: 0em;
 }
-
